Remove MaxPermSize from runMcV scripts. [2042]